# next-day-wildfire-spread

./: .gitignore  README.md  create_index.py  dataset.py  download_dataset.sh  export_model.py  main.py  model.py  pyproject.toml  train.py
