[project]
name = "next-day-wildfire-spread"
version = "0.1.0"
description = "Next-day wildfire spread prediction using CNN autoencoder"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tfrecord[torch]>=1.14.6",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
]
